--- a/.k8s/production/cert-manager/do-issuer.yaml
+++ b/.k8s/production/cert-manager/do-issuer.yaml
@@ -8,7 +8,7 @@ spec:
     # The ACME server URL
     server: https://acme-v02.api.letsencrypt.org/directory
     # Email address used for ACME registration
-    email: admin@peacenik.app
+    email: admin@koto.at
     # Name of a secret used to store the ACME account private key
     privateKeySecretRef:
       name: letsencrypt-prod
