Fixing URL in ingress-backend

--- a/.k8s/production/ingresses/ingress-backend.yaml
+++ b/.k8s/production/ingresses/ingress-backend.yaml
@@ -14,7 +14,7 @@ spec:
     - "*.peacenik.app"
     secretName: koto-tls-backend
   rules:
-  - host: central.peacenik.at
+  - host: central.peacenik.app
     http:
       paths:
       - path: /
