--- a/backend/messagehub/Dockerfile
+++ b/backend/messagehub/Dockerfile
@@ -12,7 +12,7 @@ COPY common/*.go ./common/
 
 COPY ./messagehub/ ./messagehub/
 
-RUN GOOS=linux GOARCH=amd64 go build -o message-hub-service ./messagehub/cmd/
+RUN GOOS=linux GOARCH=amd64 go build -ldflags '-linkmode=external' -o message-hub-service ./messagehub/cmd/
 
 FROM jrottenberg/ffmpeg:3.4-alpine
 
