Updated docker-compose.yml for message hub

--- a/docker/message-hub/.env.template
+++ b/docker/message-hub/.env.template
@@ -1,12 +1,15 @@
 KOTO_EXTERNAL_ADDRESS=
 KOTO_USER_HUB_ADDRESS=
-KOTO_DB_NAME=koto-message-hub
+KOTO_DB_HOST=db
+KOTO_DB_PORT=5432
+KOTO_DB_SSL_MODE=disable
+KOTO_DB_NAME=message-hub
 KOTO_DB_USER=postgres
 KOTO_DB_PASSWORD=docker
-KOTO_S3_ENDPOINT=
+KOTO_S3_ENDPOINT=s3:9000
 KOTO_S3_REGION=
-KOTO_S3_KEY=
-KOTO_S3_SECRET=
-KOTO_S3_BUCKET=
-VOLUME_HUB=./data/hub
+KOTO_S3_KEY=minioadmin
+KOTO_S3_SECRET=minioadmin
+KOTO_S3_BUCKET=message-hub
 VOLUME_DB=./data/db
+VOLUME_MINIO=./data/minio
