#184 Installer for message hubs

--- a/docker/message-hub/.env.template
+++ b/docker/message-hub/.env.template
@@ -6,7 +6,7 @@ KOTO_DB_SSL_MODE=disable
 KOTO_DB_NAME=message-hub
 KOTO_DB_USER=postgres
 KOTO_DB_PASSWORD=docker
-KOTO_S3_ENDPOINT=s3:9000
+KOTO_S3_ENDPOINT=http://s3:9000
 KOTO_S3_REGION=
 KOTO_S3_KEY=minioadmin
 KOTO_S3_SECRET=minioadmin
