Updated docker-compose.yml for message hub

--- a/docker/message-hub/docker-compose.yml
+++ b/docker/message-hub/docker-compose.yml
@@ -45,3 +45,4 @@ services:
     environment:
       MINIO_ROOT_USER: ${KOTO_S3_KEY}
       MINIO_ROOT_PASSWORD: ${KOTO_S3_SECRET}
+    command: server /data
