#172 Feed post markup and likes

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -24,7 +24,7 @@
     "noErrorTruncation": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "downlevelIteration": true,
+    "downlevelIteration": true
   },
   "include": [
     "src"
