--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,7 +65,9 @@
 		"@types/react": "16.9.41",
 		"@types/react-dom": "16.9.8",
 		"@types/react-redux": "^7.1.9",
-		"@types/styled-components": "5.1.0"
+		"@types/styled-components": "5.1.0",
+		"react-hooks": "^1.0.1",
+		"tslint-react-hooks": "^2.2.2"
 	},
 	"browserslist": [
 		">0.2%",
