append the footer and header of the message panel

--- a/frontend/tsconfig.paths.json
+++ b/frontend/tsconfig.paths.json
@@ -8,6 +8,7 @@
       "@services/*": ["./src/services/*"],
       "@selectors/*": ["./src/selectors/*"],
       "@assets/*": ["./src/assets/*"],
+      "@hooks/*": ["./src/hooks/*"],
     }
   }
 }
