--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,15 +65,15 @@ services:
     restart: on-failure
     depends_on:
       - db-message-hub
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: ./Dockerfile.development
-    stdin_open: true
-    tty: true
-    working_dir: /app
-    ports:
-      - 3000:3000
+  # frontend:
+  #   build:
+  #     context: ./frontend
+  #     dockerfile: ./Dockerfile.development
+  #   stdin_open: true
+  #   tty: true
+  #   working_dir: /app
+  #   ports:
+  #     - 3000:3000
   db-user-hub:
     image: postgres:12.5
     ports:
@@ -86,5 +86,5 @@ services:
     ports:
       - "5433:5432"
     environment:
-      POSTGRES_DB: koto-message-hub-1
+      POSTGRES_DB: koto-message-hub
       POSTGRES_PASSWORD: docker
