--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
 		"core-js": "^3.6.5",
 		"dotenv": "^8.2.0",
 		"github-markdown-css": "^4.0.0",
+		"jwt-decode": "^3.1.2",
 		"lodash.isequal": "^4.5.0",
 		"lodash.unionwith": "^4.6.0",
 		"lodash.uniq": "^4.5.0",
