complete direct message excepts getting friends list

--- a/frontend/tsconfig.paths.json
+++ b/frontend/tsconfig.paths.json
@@ -9,6 +9,7 @@
       "@selectors/*": ["./src/selectors/*"],
       "@assets/*": ["./src/assets/*"],
       "@hooks/*": ["./src/hooks/*"],
+      "@types/*": ["./src/types/*"],
     }
   }
 }
