--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -7,6 +7,7 @@
       "dom.iterable",
       "esnext"
     ],
+    "preserveConstEnums": true,
     "experimentalDecorators": true,
     "allowJs": true,
     "skipLibCheck": true,
