--- a/.k8s/production/ingresses/ingress-frontend.yaml
+++ b/.k8s/production/ingresses/ingress-frontend.yaml
@@ -5,14 +5,12 @@ metadata:
   namespace: frontend
   annotations:
     kubernetes.io/ingress.class: nginx
-    cert-manager.io/cluster-issuer: "do-issuer"
-    # acme.cert-manager.io/http01-edit-in-place: "true"
-    # cert-manager.io/issue-temporary-certificate: "true"
+    cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
   tls:
   - hosts:
-    - peacenik.app
-    secretName: koto-tls
+    - "peacenik.app"
+    secretName: koto-tls-backend
   rules:
   - host: peacenik.app
     http:
