--- a/.k8s/staging/ingresses-staging/ingress-backend.yaml
+++ b/.k8s/staging/ingresses-staging/ingress-backend.yaml
@@ -5,13 +5,12 @@ metadata:
   namespace: backend-staging
   annotations:
     kubernetes.io/ingress.class: nginx
-    cert-manager.io/cluster-issuer: "do-issuer"
-    # acme.cert-manager.io/http01-edit-in-place: "true"
-    # cert-manager.io/issue-temporary-certificate: "true"
+    cert-manager.io/cluster-issuer: letsencrypt-staging
 spec:
   tls:
   - hosts:
-    - "*.orbits.at"
+    - "central.orbits.at"
+    - "node1.orbits.at"
     secretName: koto-tls-backend
   rules:
   - host: central.orbits.at
