--- a/.k8s/staging/ingresses-staging/ingress-frontend.yaml
+++ b/.k8s/staging/ingresses-staging/ingress-frontend.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: frontend-staging
   annotations:
     kubernetes.io/ingress.class: nginx
-    cert-manager.io/cluster-issuer: "do-issuer"
+    cert-manager.io/cluster-issuer: letsencrypt-staging
     # acme.cert-manager.io/http01-edit-in-place: "true"
     # cert-manager.io/issue-temporary-certificate: "true"
 spec:
