fixed firebase push notification issue

--- a/mobile/ios/Peacenik/Info.plist
+++ b/mobile/ios/Peacenik/Info.plist
@@ -43,6 +43,7 @@
 	<string>Peacenik doesn't use location</string>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>fetch</string>
 		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
