--- a/network-graph-server/package.json
+++ b/network-graph-server/package.json
@@ -4,8 +4,8 @@
   "description": "network graph server for postgre sql db",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "watch": "nodemon src/index.js"
+    "start": "node server.js",
+    "watch": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -22,10 +22,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "knex": "^0.95.6",
-    "knex-migrate": "^1.7.4",
-    "pg": "^8.6.0",
-    "postgraphile": "^4.12.3"
+    "pg": "^8.6.0"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
